--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,4 +1,4 @@
-<div class="page-section container">
+<section class="page-section container">
   <!-- grid row -->
   <div class="row" style="padding-top: 80px;">
     <!-- grid column -->
@@ -292,5 +292,5 @@
     <!-- /grid column -->
   </div>
   <!-- /grid row -->
-</div>
+</section>
 <app-loader #loader></app-loader>
