--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <app-navbar></app-navbar>
 </header>
 
-<div [@routeAnimation]="getAnimationData(routerOutlet)" class="pt-4">
+<div [@routeAnimation]="getAnimationData(routerOutlet)">
   <router-outlet #routerOutlet="outlet"></router-outlet>
 </div>
 
