--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section #hero class="hero" appParallax #p="mouseParallax" (mousemove)="p.mouseMoved($event, hero)"
+<section #hero class="hero"
   style="background-image: url(assets/images/phone-bg.jpg);">
   <div class="container text-center">
     <!-- breadcrumb-->
