--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -3,26 +3,171 @@
 *     NAVBAR
 * =====================================================
 */
-nav.navbar {
-  -webkit-transition: all 0.4s;
-  transition: all 0.4s;
-}
-
-nav.navbar.active {
-  @media all and (min-width: 760px) {
-    background: transparent;
-  }
-
+.navbar[data-aos="fixed-header"] {
+  padding: 1.1rem 1rem;
+  width: 100%;
+  position: absolute;
+  z-index: 1000;
   background: #fff;
   -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.08);
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.08);
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+
+  @media all and (min-width: 760px) {
+    background: transparent;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+  }
+
+
+  &.aos-animate {
+    background: #fff;
+    position: fixed;
+    -webkit-box-shadow: 0 8px 16px rgba(0, 0, 0, 0.23);
+    -moz-box-shadow: 0 8px 16px rgba(0, 0, 0, 0.23);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.23);
+  }
+
+  .header-icons-noti {
+    width: 16px;
+    height: 16px;
+    padding: 0 2px;
+    border-radius: 50%;
+    background-color: #E7475E;
+    color: white;
+    font-size: 12px;
+    position: absolute;
+    top: 48px;
+  }
+}
+
+.navbar-brand {
+  display: inline-block;
+  padding-top: 0.3125rem;
+  padding-bottom: 0.3125rem;
+  margin-right: 1rem;
+  font-size: 1.25rem;
+  width: 7.5rem;
+}
+
+.navbar-toggler {
+  padding: 0.25rem 0.75rem;
+  font-size: 0.85rem;
+  font-weight: 600;
+  line-height: 1;
+  text-transform: uppercase;
+  border: 1px solid transparent;
+  border-radius: 3rem;
+}
+
+.navbar-toggler:hover,
+.navbar-toggler:focus {
+  outline: none;
+}
+
+.navbar-light .navbar-brand {
+  color: rgba(0, 0, 0, 0.9);
+}
+
+.navbar-light .navbar-brand:hover,
+.navbar-light .navbar-brand:focus {
+  color: rgba(0, 0, 0, 0.9);
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-nav .nav-link:focus {
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.navbar-light .navbar-nav .nav-link.disabled {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.navbar-light .navbar-nav .show>.nav-link,
+.navbar-light .navbar-nav .active>.nav-link,
+.navbar-light .navbar-nav .nav-link.show,
+.navbar-light .navbar-nav .nav-link.active {
+  color: rgba(0, 0, 0, 0.9);
+}
+
+.navbar-light .navbar-toggler {
+  color: rgba(0, 0, 0, 0.5);
+  border-color: rgba(0, 0, 0, 0.1);
+}
+
+.navbar-light .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
+.navbar-light .navbar-text {
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.navbar-dark .navbar-brand {
+  color: #fff;
+}
+
+.navbar-dark .navbar-brand:hover,
+.navbar-dark .navbar-brand:focus {
+  color: #fff;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.navbar-dark .navbar-nav .nav-link:hover,
+.navbar-dark .navbar-nav .nav-link:focus {
+  color: rgba(255, 255, 255, 0.75);
+}
+
+.navbar-dark .navbar-nav .nav-link.disabled {
+  color: rgba(255, 255, 255, 0.25);
+}
+
+.navbar-dark .navbar-nav .show>.nav-link,
+.navbar-dark .navbar-nav .active>.nav-link,
+.navbar-dark .navbar-nav .nav-link.show,
+.navbar-dark .navbar-nav .nav-link.active {
+  color: #fff;
+}
+
+.navbar-dark .navbar-toggler {
+  color: rgba(255, 255, 255, 0.5);
+  border-color: rgba(255, 255, 255, 0.1);
+}
+
+.navbar-dark .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
+.navbar-dark .navbar-text {
+  color: rgba(255, 255, 255, 0.5);
 }
 
 nav.navbar .dropdown-menu {
-  margin-top: 1.5rem;
+  top: 80px;
+  right: 8%;
+  left: unset;
+}
+
+.dropdown {
+  position: unset;
+  left: unset;
 }
 
 /* NAVBAR MEDIAQUERY */
+@media (min-width: 1600px) {
+  .dropdown-menu {
+    right: 8%;
+  }
+}
+
 @media (max-width: 991.98px) {
   nav.navbar {
     background: #fff;
@@ -33,7 +178,6 @@ nav.navbar .dropdown-menu {
   nav.navbar .dropdown-menu {
     // -webkit-box-shadow: none;
     // box-shadow: none;
-    margin-top: 0;
     margin-bottom: 1rem;
   }
 }
