--- a/src/app/shared/divider/divider.component.html
+++ b/src/app/shared/divider/divider.component.html
@@ -1,23 +1,33 @@
 <!-- Divider Section-->
-<section [ngClass]="dividerColors?.bgColor">
-  <div class="container">
-    <div class="text-center">
-      <h2 [ngClass]="dividerColors?.title">
-        {{ dividerContent?.title }}
-        <i class="fa" [ngClass]="dividerContent?.icon"></i>
-      </h2>
-      <div class="row">
-        <div class="col-lg-9 mx-auto">
-          <p
-            class="lead mt-2"
-            [ngClass]="dividerColors?.text"
-            [innerHTML]="dividerContent?.text"
-          ></p>
-        </div>
+<section
+  #section
+  [style.height]="section.clientWidth < 760 ? '450px' : '650px'"
+  class="box-shadow text-center"
+  [ngClass]="dividerColors?.bgColor"
+>
+  <div
+    *ngIf="dividerContent.imageURL"
+    [style.height]="section.clientWidth < 760 ? '450px' : '650px'"
+    [style.background-image]="'url(' + dividerContent.imageURL + ')'"
+    class="divider-background-image"
+  ></div>
+
+  <div class="pt-4">
+    <h2 [ngClass]="dividerColors?.title">
+      {{ dividerContent?.title }}
+    </h2>
+    <div class="row">
+      <div class="col-lg-3"></div>
+      <div class="col-lg-6">
+        <p
+          class="lead mt-2 mb-4"
+          [ngClass]="dividerColors?.text"
+          [innerHTML]="dividerContent?.text"
+        ></p>
+        <button class="mt-4 btn-lg" [ngClass]="dividerColors?.cta">
+          Learn More
+        </button>
       </div>
-      <button class="btn" [ngClass]="dividerColors?.cta">
-        Learn More
-      </button>
     </div>
   </div>
 </section>
