--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -21,11 +21,15 @@
 }
 
 .btn-outline-light:hover {
-  color: #E7475E !important;
+  color: rgb(231, 71, 94) !important;
 }
 
 section {
   padding: 7rem 0;
+  .box-shadow {
+    -moz-box-shadow: 0 3px 3px rgba(0, 0, 0, .23);
+    box-shadow: 0 3px 3px rgba(0, 0, 0, .23);
+  }
 }
 
 strong {
@@ -170,6 +174,29 @@ button {
 
   @media all and (min-width: 1200px) {
     height: 860px;
+    background-size: 100%;
+
+    .background {
+      height: 860px;
+      background-size: 100%;
+    }
+  }
+}
+
+.background {
+  position: absolute;
+  top: 86.5px;
+  max-height: 515px;
+  opacity: .75;
+  padding: 8.5rem 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 600px;
+
+
+  @media all and (max-width: 990px) {
+    max-height: 509px;
   }
 }
 
@@ -209,7 +236,7 @@ button {
 /* HERO MEDIAQUERY */
 @media (max-width: 991.98px) {
   .hero {
-    padding: 5rem 0 7rem;
+    padding: 7rem 0 7rem;
     // padding-top: 1.6rem !important;
   }
 
@@ -472,144 +499,8 @@ button {
 
 */
 /*
- * 1. NAVBAR
+ * 1. SIDENAV
  */
-.navbar[data-aos="fixed-header"] {
-  padding: 1.1rem 1rem;
-  width: 100%;
-  position: absolute;
-  background: #fff;
-  z-index: 1000;
-  transition: all 1s ease-out;
-
-  &.aos-animate {
-    position: fixed;
-    -webkit-box-shadow: 0 8px 16px rgba(0, 0, 0, 0.23);
-    -moz-box-shadow: 0 8px 16px rgba(0, 0, 0, 0.23);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.23);
-  }
-
-  .header-icons-noti {
-    width: 16px;
-    padding: 0 0 0 1px;
-    height: 16px;
-    border-radius: 50%;
-    background-color: #E7475E;
-    color: white;
-    font-size: 12px;
-    position: absolute;
-    top: 45px;
-  }
-}
-
-.navbar-brand {
-  display: inline-block;
-  padding-top: 0.3125rem;
-  padding-bottom: 0.3125rem;
-  margin-right: 1rem;
-  font-size: 1.25rem;
-  width: 7.5rem;
-}
-
-.navbar-toggler {
-  padding: 0.25rem 0.75rem;
-  font-size: 0.85rem;
-  font-weight: 600;
-  line-height: 1;
-  text-transform: uppercase;
-  border: 1px solid transparent;
-  border-radius: 3rem;
-}
-
-.navbar-toggler:hover,
-.navbar-toggler:focus {
-  outline: none;
-}
-
-.navbar-light .navbar-brand {
-  color: rgba(0, 0, 0, 0.9);
-}
-
-.navbar-light .navbar-brand:hover,
-.navbar-light .navbar-brand:focus {
-  color: rgba(0, 0, 0, 0.9);
-}
-
-.navbar-light .navbar-nav .nav-link {
-  color: rgba(0, 0, 0, 0.5);
-}
-
-.navbar-light .navbar-nav .nav-link:hover,
-.navbar-light .navbar-nav .nav-link:focus {
-  color: rgba(0, 0, 0, 0.7);
-}
-
-.navbar-light .navbar-nav .nav-link.disabled {
-  color: rgba(0, 0, 0, 0.3);
-}
-
-.navbar-light .navbar-nav .show>.nav-link,
-.navbar-light .navbar-nav .active>.nav-link,
-.navbar-light .navbar-nav .nav-link.show,
-.navbar-light .navbar-nav .nav-link.active {
-  color: rgba(0, 0, 0, 0.9);
-}
-
-.navbar-light .navbar-toggler {
-  color: rgba(0, 0, 0, 0.5);
-  border-color: rgba(0, 0, 0, 0.1);
-}
-
-.navbar-light .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
-}
-
-.navbar-light .navbar-text {
-  color: rgba(0, 0, 0, 0.5);
-}
-
-.navbar-dark .navbar-brand {
-  color: #fff;
-}
-
-.navbar-dark .navbar-brand:hover,
-.navbar-dark .navbar-brand:focus {
-  color: #fff;
-}
-
-.navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.5);
-}
-
-.navbar-dark .navbar-nav .nav-link:hover,
-.navbar-dark .navbar-nav .nav-link:focus {
-  color: rgba(255, 255, 255, 0.75);
-}
-
-.navbar-dark .navbar-nav .nav-link.disabled {
-  color: rgba(255, 255, 255, 0.25);
-}
-
-.navbar-dark .navbar-nav .show>.nav-link,
-.navbar-dark .navbar-nav .active>.nav-link,
-.navbar-dark .navbar-nav .nav-link.show,
-.navbar-dark .navbar-nav .nav-link.active {
-  color: #fff;
-}
-
-.navbar-dark .navbar-toggler {
-  color: rgba(255, 255, 255, 0.5);
-  border-color: rgba(255, 255, 255, 0.1);
-}
-
-.navbar-dark .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
-}
-
-.navbar-dark .navbar-text {
-  color: rgba(255, 255, 255, 0.5);
-}
-
 .sidenav {
   position: absolute;
   z-index: 2000;
