--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
 <section #hero class="hero home-page" ngxAnimatedGradient [colors]="colors()">
   <div
     style="background-image: url(assets/img/hero-bg.png)"
-    class="background"
+    class="background img-fluid"
   ></div>
   <div class="container mb-5">
     <div class="row align-items-center justify-content-center">
