--- a/src/app/shared/divider/divider.component.html
+++ b/src/app/shared/divider/divider.component.html
@@ -9,7 +9,7 @@
     *ngIf="dividerContent.imageURL"
     [style.height]="section.clientWidth < 760 ? '450px' : '650px'"
     [style.background-image]="'url(' + dividerContent.imageURL + ')'"
-    class="divider-background-image"
+    class="divider-background-image img-fluid"
   ></div>
 
   <div class="pt-4">
