--- a/src/app/shared/thank-you/thank-you.component.html
+++ b/src/app/shared/thank-you/thank-you.component.html
@@ -1,3 +1,16 @@
-<p>
-  thank-you works!
-</p>
+<div class="jumbotron text-xs-center">
+  <h1 class="display-3">Thank You!</h1>
+  <p class="lead">
+    <strong>{{ content.instructions }}</strong> {{ content.subject }}
+  </p>
+  <hr />
+  <p>Having trouble? <a href="mailto:info@medtelplus.com">Contact us</a></p>
+  <p class="lead">
+    <a
+      class="btn btn-primary btn-sm"
+      href="https://medtelplus.com"
+      role="button"
+      >Continue to homepage</a
+    >
+  </p>
+</div>
