--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -122,7 +122,7 @@
 						</div>
 
 						<div class="size14 trans-0-4 m-b-10">
-							<button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4" (click)="updateTotals(userId, .075)">
+							<button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
 								Update Totals
 							</button>
 						</div>
