--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -80,14 +80,14 @@
         </div>
         <div class="box animate" data-aos="fade-left" data-aos-delay=".3">
           <div class="icon d-flex align-items-end"><img src="assets/img/technology.svg" alt="" class="img-fluid"></div>
-          <h5>Call center</h5>
+          <h5>Customer Service</h5>
           <p class="text-small font-weight-light">This number is toll free for your convenience, but electronic
             communication is preferred.</p><strong class="text-muted">+1 844 879 4788</strong>
         </div>
         <div class="box animate" data-aos="fade-left" data-aos-delay=".3">
           <div class="icon d-flex align-items-end"><img src="assets/img/multimedia.svg" alt="" class="img-fluid"></div>
           <h5>Electronic support</h5>
-          <p class="text-small font-weight-light">Please feel free to write us an email.</p>
+          <p class="text-small font-weight-light">Feel free to send us an message.</p>
           <ul class="text-center">
             <li><a href="mailto:info@medtelplus.com" class="text-small">info@medtelplus.com</a></li>
           </ul>
