--- a/src/app/shared/divider/divider.component.scss
+++ b/src/app/shared/divider/divider.component.scss
@@ -1,22 +1,21 @@
 .divider-background-image {
-  background-size: cover;
-  -moz-background-size: cover;
-  -webkit-background-size: cover;
+  // background-size: cover;
+  // -moz-background-size: cover;
+  // -webkit-background-size: cover;
   background-position: center center;
   -moz-background-position: center center;
   -webkit-background-position: center center;
   background-attachment: fixed;
   opacity: .23;
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
   max-height: 650px;
   margin: -5rem 0;
   // z-index: ;
 
   @media (max-width: 760px) {
     width: 100vw;
-    height: auto;
+    max-height: 50%;
   }
 
   @media (min-width: 991px) {
