--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,4 +1,5 @@
 <section class="page-section container">
+  <h1 class="text-center text-uppercase p-2">Good {{ getGreetingTime()}}, {{ user.username }}!</h1>
   <!-- grid row -->
   <div class="row" style="padding-top: 80px;">
     <!-- grid column -->
