--- a/src/app/shared/brand-button/brand-button.component.html
+++ b/src/app/shared/brand-button/brand-button.component.html
@@ -1,4 +1,4 @@
-<div class="svg-container">
+<div class="svg-container" id="logo-container">
   <div
     id="brand-button"
     style="cursor: pointer;"
