--- a/src/app/shared/divider/divider.component.html
+++ b/src/app/shared/divider/divider.component.html
@@ -22,7 +22,7 @@
         <p
           class="lead mt-2 mb-4"
           [ngClass]="dividerColors?.text"
-          [innerHTML]="dividerContent?.text"
+          [innerHTML]="dividerContent?.text | safeHtml"
         ></p>
         <button class="mt-4 btn-lg" [ngClass]="dividerColors?.cta">
           Learn More
